[gd_scene load_steps=5 format=2]

[ext_resource path="res://resource_bg.png" type="Texture" id=1]
[ext_resource path="res://planets/Planet6.png" type="Texture" id=2]
[ext_resource path="res://PlanetUI.gd" type="Script" id=3]
[ext_resource path="res://resource_bg_gray.png" type="Texture" id=4]

[node name="PlanetUI" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( -2.38419e-07, 0 )
scale = Vector2( 1.92727, 6.86667 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 55.5789, 15.2105 )

[node name="FG" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )

[node name="Container" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportGood" type="Sprite" parent="Container"]
position = Vector2( -11, 17 )
texture = ExtResource( 1 )
hframes = 100
vframes = 6
frame = 2

[node name="ExportGood" type="Sprite" parent="Container"]
position = Vector2( 11, 17 )
texture = ExtResource( 1 )
hframes = 100
vframes = 6
frame = 2

[node name="Buy" type="Button" parent="Container"]
margin_left = 8.0
margin_top = 19.0
margin_right = 68.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell" type="Button" parent="Container"]
margin_left = -14.0
margin_top = 19.0
margin_right = 46.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Container"]
margin_left = -3.0
margin_top = 19.0
margin_right = 57.0
margin_bottom = 39.0
rect_scale = Vector2( 0.1, 0.1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Container/Buy" to="." method="_on_Buy_button_up"]
[connection signal="button_up" from="Container/Sell" to="." method="_on_Sell_button_up"]
[connection signal="button_up" from="Container/Exit" to="." method="_on_Exit_button_up"]
